fixing image text wrap.

--- a/style.css
+++ b/style.css
@@ -1,5 +1,3 @@
 img[src="images/IMG_1130.jpg"] {
-  width: 350px;
-  float: left;
-  position: relative; 
+  width: 400px;
 }
